# fice-events-bot

./: .dockerignore  .env.dist  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
bot/: main.py  scheduler.py  settings.py
bot/constants/: date_format.py  request_types.py  roles.py
bot/filters/: is_admin.py  is_moderaror.py  is_registered.py
bot/keyboards/: admin.py  buttons.py  confirm.py  events.py  main_menu.py  register.py
bot/keyboards/inline/: admin.py  buttons.py  confirm.py  events.py  feedback.py  register.py
bot/keyboards/reply/: buttons.py  start_menu.py
bot/messages/: admin.py  environment.py  errors.py  events.py  feedback.py  start.py
bot/models/: __init__.py  answer.py  event.py  question.py  request.py  user.py
bot/repositories/: answer.py  base.py  event.py  question.py  request.py  user.py
bot/routes/private/: events.py  feedback.py  start.py
bot/routes/private/admin/: __init__.py  events.py  menu.py
bot/states/: add_form.py  edit_form.py  feedback_form.py  registration_form.py  send_form.py  start_form.py
migrations/: env.py
migrations/versions/: 2023-04-30-21-31-37_e4cafa285bb2_initial_migration.py  2023-05-01-23-52-42_51f501563ece_initial_migration.py  2023-06-25-14-08-35_f11f564d761d_added_type_for_request_and_question.py  5e9b9c826a02_init.py  a95323f65935_added_unique_keys.py  ec0c43d32556_added_confirm_field_for_request_and_.py
