[tool.poetry]
name = "fice-events-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "fice_events_bot" }]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = { version = "^3.0.0b7", allow-prereleases = true }
pydantic = { version = "^1.10.7", extras = ["dotenv"] }
sqlalchemy = { version = "^2.0.9", extras = ["asyncio"] }
asyncpg = "^0.27.0"
alembic = "^1.10.3"
redis = "^4.5.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
types-redis = "^4.5.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
